syntax = "proto3";

option csharp_namespace = "server.api.gRPC.Admin";

package store;

import "google/api/annotations.proto";
import "gRPC/Protos/shared.proto";

service Store {
	rpc GetStores (GetStoresRequest) returns (GetStoresReply){
		option (google.api.http) = {
			get: "/api/admin/store"
		};
	}

	rpc AddStore (StoreMessage) returns (StoreMessage){
		option (google.api.http) = {
			post: "/api/admin/store",
			body : "*"	
		};
	}

	rpc UpdateStore (StoreMessage) returns (StoreMessage){
		option (google.api.http) = {
			put: "/api/admin/store",
			body : "*"	
		};
	}

	rpc EditStore (StoreMessage) returns (StoreMessage){
		option (google.api.http) = {
			patch: "/api/admin/store",
			body : "*"	
		};
	}

	rpc RemoveStore (StoreMessage) returns (StoreMessage){
		option (google.api.http) = {
			delete: "/api/admin/store",
			body : "*"	
		};
	}
}

message GetStoresRequest {

	optional uint64 id = 2;

	shared.Pagination p = 3;
}

message GetStoresReply {
	repeated StoreMessage stores = 1;
	int64 count = 2;
}

message StoreMessage {
	uint64 id = 1;
	string city = 2;
	int32 capacity = 3;
}

